--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "joi": "^17.13.3",
+    "joi-password-complexity": "^5.2.0",
+    "mongodb": "^6.17.0"
   }
 }
